# polytechraytracing

./: EclipseConfig.md  MemoryLeaks.md  OpenTasks.md  ProjectHome.md  createvideo.sh  methodeRankItpp.md
SceneDescriptions/: Scene1.xml  Scene2.xml  defaultScene.xml
docs/: raytracing03.xmi
img/: billard8.ppm  quentin.ppm
src/: .cproject  CMakeLists.txt  Color.cpp  Color.h  Couleur.cpp  Draughtboard.cpp  Draughtboard.h  Image.cpp  Image.h  ImageTexture.cpp  ImageTexture.h  Intersection.cpp  Intersection.h  LambertModel.cpp  LambertModel.h  LightModel.cpp  LightModel.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  NoiseTexture.h  ONB.cpp  ParamSurf.cpp  ParamSurf.h  PhongModel.cpp  PhongModel.h  Plane.cpp  Plane.h  Quadrics.cpp  Quadrics.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  SceneParser.cpp  (+28 more)
src/Debug/: RayTracing  subdir.mk
tests/lapack/: Makefile
trunk/: CMakeLists.txt  createvideo.sh
trunk/SceneDescriptions/: Scene1.xml  Scene2.xml  defaultScene.xml
trunk/docs/: TODO.txt  raytracing02.xmi
trunk/src/: .project  CMakeLists.txt  Color.cpp  Color.h  Couleur.h  Draughtboard.cpp  Draughtboard.h  Image.cpp  Image.h  ImageTexture.cpp  Intersection.cpp  LightModel.cpp  LightModel.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  NoiseTexture.cpp  ONB.cpp  ONB.h  ParamSurf.cpp  ParamSurf.h  PhongModel.cpp  PhongModel.h  Plane.cpp  Plane.h  Quadrics.cpp  Quadrics.h  Ray.cpp  Ray.h  RayTracer.cpp  RayTracer.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  SceneParser.cpp  SceneParser.h  Screen.cpp  Screen.h  (+26 more)
trunk/src/Debug/: RayTracing  application.d  makefile
trunk/tests/lapack/: Makefile
wiki/: EclipseConfig.wiki  MemoryLeaks.wiki  OpenTasks.wiki
